client/src/index.css
body {
    background-color: #424b54;
    color: #fcfcfc;
    font-family: Arial, Helvetica, sans-serif;
}

.App {
    margin: auto;
    width: 90vw;
    height: 100vh;
    font-family: Arial, Helvetica, sans-serif;
}

.navbar {
    background-color: #403f4c;
    padding: 1rem;
    width: 100vw;
    display: flex;
    align-items: center;
}

.navbar .account {
    margin: auto;
}

.navbar .account a {
    margin-left: 30px;
}

.navbar h1 {
    margin-left: 1rem;
}

a:link, a:visited, a:hover, a:active {
    text-decoration: none;
    color: inherit;
}

.navbar button {
    all: unset;
    cursor: pointer
}

.login {
    margin: auto;
    width: 90vw;
}

.login input {
    all: unset;
    background-color: #403f4c;
    color: #fcfcfc;
    padding: 1rem;
    border-radius: 25px;
    margin-top: 10px;
    margin-bottom: 10px;
    width: 50vw;
}

.login button {
    all: unset;
    cursor: pointer;
    padding: 5px;
    background-color: #73956f;
    border-radius: 5px;
    margin: 10px;
}

.signup {
    margin: auto;
    width: 90vw;
}

.signup input {
    all: unset;
    background-color: #403f4c;
    color: #fcfcfc;
    padding: 1rem;
    border-radius: 25px;
    margin-top: 10px;
    margin-bottom: 10px;
    width: 50vw;
}

.signup button {
    all: unset;
    cursor: pointer;
    padding: 5px;
    background-color: #73956f;
    border-radius: 5px;
    margin: 10px;
}

.new-todo .textbox {
    all: unset;
    background-color: #403f4c;
    color: #fcfcfc;
    padding: 1rem;
    border-radius: 25px;
}

.new-todo .submit {
    all: unset;
    cursor: pointer;
    padding: 5px;
    background-color: #73956f;
    border-radius: 5px;
    margin: 10px;
}

.todo {
    margin-bottom: 1rem;
    width: fit-content;
    padding: 0px 25px 10px;
    display: flex;
    justify-content: center;
    background-color: #403f4c;
    border-radius: 25px;
}

.todo.is-done p {
    text-decoration: line-through;
    color: #73956f;
}

.todo p {
    font-size: 20px;
}

.todo button {
    all: unset;
    cursor: pointer;
    padding: 5px;
    margin: 5px;
}

.todo .done {
    background-color: #73956f;
    border-radius: 5px;
}

.todo .delete {
    background-color: #a22c29;
    border-radius: 5px;
}

